updated with first 2 links

--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>Fablab UP Cebu</h1>
+<a href="https://docs.google.com/a/up.edu.ph/forms/d/e/1FAIpQLScz1QcAmS-HY1VME9TiuPGymzYTUVnQSmdJQEOz33Wldd7asA/viewform">Register</a></br>
+<a href="https://docs.google.com/forms/d/e/1FAIpQLSecjcQApXYQH0Cyszx2vvsTqrk-rrk_0zVAxD_iueiNIzzpbA/viewform">Feedback</a></br>
+
 </body>
 </html>
