--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 		   	<div class="row">
 		   		<div class="col-twelve">
 
-			  				<h3 class="animate-intro">Fablab UP Cebu.</h3>
+			  				<h3 class="animate-intro">Fablab UP Cebu</h3>
 				  			<h1 class="animate-intro">
 							Make Almost  <br>
 							Anything
