--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <!--- basic page needs
    ================================================== -->
    <meta charset="utf-8">
-	<title>Infinity</title>
+	<title>Fablabx</title>
 	<meta name="description" content="">
 	<meta name="author" content="">
 
@@ -40,7 +40,7 @@
    <header>
 
    	<div class="header-logo">
-	      <a href="index.html">Infinity</a>
+	      <a href="index.html">Fablab UP Cebu</a>
 	   </div>
 
 		<a id="header-menu-trigger" href="#0">
