--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <!--- basic page needs
    ================================================== -->
    <meta charset="utf-8">
-	<title>Fablabx</title>
+	<title>Fablab UP Cebu</title>
 	<meta name="description" content="">
 	<meta name="author" content="">
 
@@ -52,7 +52,7 @@
 
 			<a href="#0" class="close-button" title="close"><span>Close</span></a>
 
-	   	<h3>Infinity.</h3>
+	   	<h3>Fablab UP Cebu</h3>
 
 			<ul class="nav-list">
 				<li class="current"><a class="smoothscroll" href="#home" title="">Home</a></li>
@@ -62,11 +62,11 @@
 				<li><a class="smoothscroll" href="#contact" title="">Contact</a></li>
 			</ul>
 
-			<p class="sponsor-text">
+			<!-- <p class="sponsor-text">
 				Looking for an awesome and reliable webhosting? Try <a href="http://www.dreamhost.com/r.cgi?287326|STYLESHOUT">DreamHost</a>.
 				Get <span>$50 off</span> when you sign up with the promocode <span>styleshout</span>.
-				<!-- Simply type	the promocode in the box labeled “Promo Code” when placing your order. -->
-			</p>
+				<!-- Simply type	the promocode in the box labeled “Promo Code” when placing your order. 
+		</p> -->
 
 			<ul class="header-social-list">
 	         <li>
