--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 
 				<div class="intro">
 					<h3 class="animate-this">About Us</h3>
-	   			<p class="lead animate-this"><span>Fablab UP Cebu</span> is the first makerspace in Cebu, PH. We aim to bring rapid prototyping practices through digital fabrication to mamkers, design students, entrepreneurs and the dynamic Cebuano market.</p>
+	   			<p class="lead animate-this"><span>Fablab UP Cebu</span> is the first makerspace in Cebu bringing digital fabrication technologies to the Cebuano maker community.</p>
 				</div>
 
    		</div> <!-- end col-full  -->
