--- a/index.html
+++ b/index.html
@@ -183,7 +183,9 @@
    				<h3>Services</h3>
    			   <h1>What We Do.</h1>
 
-   			   <p class="lead">Lorem ipsum Elit ut consequat veniam eu nulla nulla reprehenderit reprehenderit sit velit in cupidatat ex aliquip ut cupidatat Excepteur tempor id irure sed dolore sint sunt voluptate ullamco nulla qui Duis qui culpa voluptate enim ea aute qui veniam in irure et nisi nostrud deserunt est officia minim.</p>
+   			   <p class="lead">
+             Turn hours of manual labor into minutes of consistent machine precision. We provide <span> computer numerically controlled (CNC) </span> services to convert digital ideas into tangible physical outputs. Our <span> resident makers </span> also conduct design and machine operation workshops to equip makers from all backgrounds the capacity to run the machine themselves. 
+           </p>
 
    	   </div> <!-- end col-full -->
    	</div> <!-- end row -->
